k8s/phonebook-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebook
  namespace: api-backend
  labels:
    app: phonebook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phonebook
  template:
    metadata:
      labels:
        app: phonebook
    spec:
      containers:
      - name: phonebook
        image: docker.io/zedanlab/phonebookapi-image:latest
        ports:
        - name: http
          containerPort: 8000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: phonebook
  namespace: api-backend
spec:
  type: ClusterIP
  selector:
    app: phonebook
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8000
